WIP - Creating skeleton for API, model, adapter and ViewModel

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,4 @@
 <resources>
-    <string name="app_name">BlogViewer</string>
+    <string name="app_name">Blog Viewer</string>
+    <string name="blog_posts">Blog Posts</string>
 </resources>
